solve db connection error

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
-                  <th scope="col">#</th>
+                  <th scope="col">SI No.</th>
                   <th scope="col">Name</th>
                   <th scope="col">E-mail</th>
                   <th scope="col">Mobile</th>
@@ -21,7 +21,7 @@
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{student.student_name}}</td>
-                    <td>{{student.student_email}}</td>
+                    <td>{{student.stident_email}}</td>
                     <td>{{student.student_phone}}</td>
                     <td>{{student.student_roll}}</td>
                     <td>{{student.semester}}</td>
