add student done

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -26,7 +26,6 @@
       </form>
     </div>
   </nav>
-{% comment %}
   <!-- alert message  -->
   <div class=" d-flex align-items-center justify-content-center">
     {% for message in messages %}
@@ -34,7 +33,7 @@
       <strong>Message : </strong> {{message}}
     </div>
     {% endfor %}
-  </div> {% endcomment %}
+  </div>
 
 
   {% block start %}
