add update student form and get previous value

--- a/home/templates/student/add_student.html
+++ b/home/templates/student/add_student.html
@@ -2,6 +2,7 @@
 {% block start %}
     <h1 class="text-primary text-center mt-4">Tiger Park Limited</h1>
     <hr>
+    <h3 class="text-center my-3 text-success">Add New Student</h3>
     <div class="container">
       <form class="row g-3" method="POST">
         {% csrf_token %}
