--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,7 +35,7 @@
                     <td>{{student.department}}</td>
                     <td>
                       <a class="btn btn-danger" href="{% url 'delete_student' student.id%}">Delete</a>
-                      <a class="btn btn-success" href="">Edit</a>
+                      <a class="btn btn-success" href="{% url 'update_student' student.id%}">Edit</a>
                   </td>
                 </tr>
                 {% endfor %}
