update sutudent department error solve

--- a/home/templates/student/update_student.html
+++ b/home/templates/student/update_student.html
@@ -24,7 +24,7 @@
         <div class="col-md-6">
           <label for="inputDepartment" class="form-label">Department</label>
           <select id="inputDepartment" name="department" class="form-select">
-            <option selected value="">{{student.department}}</option>
+            <option selected>{{student.department}}</option>
             <option>Computer Science & Technology</option>
             <option>Civil Technology</option>
             <option>Electrical Technology</option>
