genarate pdf file

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,8 +4,11 @@
     <hr>
     <p class="text-center fw-bold text-warning-emphasis">Data from databse dinamacly</p>
     <div class="container">
-        <div class="d-flex justify-content-md-end mb-4">
-            <a href="/add/student" class="btn btn-success">Add Student</a>
+    </div>
+    <div class="container">
+      <div class="d-flex justify-content-md-end mb-4 gap-4">
+          <a href="/export-pdf" class="btn btn-info fw-900">Export PDF</a>
+          <a href="/add/student" class="btn btn-success">Add Student</a>
         </div>
     </div>
 <div class="container">
