design change pdf file

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
     </div>
     <div class="container">
       <div class="d-flex justify-content-md-end mb-4 gap-4">
-          <a href="/export-pdf" class="btn btn-info fw-900">Export PDF</a>
+          <a href="/export-pdf" class="btn btn-info">Export PDF</a>
           <a href="/add/student" class="btn btn-success">Add Student</a>
         </div>
     </div>
