--- a/home/templates/pdf_download/pdf_output.html
+++ b/home/templates/pdf_download/pdf_output.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF file</title>
+    <title>Student Information PDF</title>
     <!-- Bootstrap css link  -->
     <link
      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -20,25 +20,28 @@
     </style>
 </head>
 <body>
-    <h2 class="text-primary text-center mt-4">Saic Institute Of Management & Technology</h2>
+    <div style="margin-bottom: 10%;">
+        <h2 class="text-center mt-4" style="color:green; font-weight:700;">Saic Institute Of Management & Technology</h2>
+        <p style="text-align:center;">M/3, Mirpur-14 Dhaka, 1216</p>
+        <h5 class="text-center fw-bold text-warning-emphasis">Student Information</h5>
+    </div>
     <hr>
-    <p class="text-center fw-bold text-warning-emphasis">Student Information</p>
 
-<div class="container">
-    
-        <table class="table table-bordered table-hover">
+    <div class="container">
+        
+        <table class="table table-bordered table-hover" style="border: 1px solid">
             <thead>
                 <tr>
-                  {% comment %} <th scope="col">SI No.</th> {% endcomment %}
-                  <th scope="col">Name</th>
-                  {% comment %} <th scope="col">E-mail</th> {% endcomment %}
-                  <th scope="col">Mobile</th>
-                  <th scope="col">Roll</th>
-                  <th scope="col">Semester</th>
-                  <th scope="col">Department</th>
+                {% comment %} <th scope="col">SI No.</th> {% endcomment %}
+                <th scope="col">Name</th>
+                {% comment %} <th scope="col">E-mail</th> {% endcomment %}
+                <th scope="col">Mobile</th>
+                <th scope="col">Roll</th>
+                <th scope="col">Semester</th>
+                <th scope="col">Department</th>
                 </tr>
-              </thead>
-              <tbody>
+            </thead>
+            <tbody>
                 {% for student in students %}
                 <tr>
                     {% comment %} <th scope="row">{{forloop.counter}}</th> {% endcomment %}
@@ -48,11 +51,17 @@
                     <td>{{student.student_roll}}</td>
                     <td>{{student.semester}}</td>
                     <td>{{student.department}}</td>
-                  
+                
                 </tr>
                 {% endfor %}
-              </tbody>
+            </tbody>
         </table>
-</div>
+    </div>
+    <div class="container">
+        <footer style="line-height:10px; text-align:center; margin-top: 10%;">
+            <p>Saic Institute Of Management & Technology</p>
+            <small>M/3, Mirpur-14, Dhaka-1216</small>
+        </footer>
+    </div>
 </body>
 </html>
