employee info page deisgn added

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,8 +20,8 @@
       <a class="navbar-brand">Tiger Park</a>
       <form class="d-flex">
         
-          <a href="/home" class="btn btn-success" style="margin-right: 20px;" type="submit">Logout</a>
-          <a href="/home" class="btn btn-success" type="submit">Login</a>
+          <a href="/home" class="btn btn-success" style="margin-right: 20px;" type="submit">Student Info</a>
+          <a href="/home" class="btn btn-success" type="submit">Employee Info</a>
         
       </form>
     </div>
