--- a/home/templates/employee/index.html
+++ b/home/templates/employee/index.html
@@ -31,9 +31,10 @@
                     <td>{{employee.employee_name}}</td>
                     <td>{{employee.employee_email}}</td>
                     <td>{{employee.employee_phone}}</td>
+                    <td>{{employee.employee_address}}</td>
                     <td>
-                      <a class="btn btn-danger" href="{% url 'delete_student' student.id%}">Delete</a>
-                      <a class="btn btn-success" href="{% url 'update_student' student.id%}">Edit</a>
+                      <a class="btn btn-danger" href="">Delete</a>
+                      <a class="btn btn-success" href="">Edit</a>
                   </td>
                 </tr>
                 {% endfor %}
