--- a/home/templates/employee/index.html
+++ b/home/templates/employee/index.html
@@ -32,7 +32,7 @@
                     <td>{{employee.employee_email}}</td>
                     <td>{{employee.employee_phone}}</td>
                     <td>{{employee.employee_address}}</td>
-                    <td>
+                    <td class="text-center">
                       <a class="btn btn-danger" href="">Delete</a>
                       <a class="btn btn-success" href="">Edit</a>
                   </td>
