--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -17,7 +17,7 @@
 
    <nav class="navbar bg-light p-3 shadow-md">
     <div class="container-fluid">
-      <a class="navbar-brand">Tiger Park</a>
+      <a href="/" class="navbar-brand fw-bold">SIMT</a>
       <form class="d-flex">
         
           <a href="/home" class="btn btn-success" style="margin-right: 20px;">Student Info</a>
@@ -39,5 +39,8 @@
   {% block start %}
 
   {% endblock %}
+{% comment %} bootstrap js link  {% endcomment %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
