--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block start %}
 
-    <div class="container">
+    {% comment %} <div class="container">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -23,6 +23,60 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
-    </div>
+    </div> {% endcomment %}
 
+    <div id="carouselExampleCaptions" class="carousel slide container mt-4">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://shorturl.at/qvAH7" class="d-block w-100 h-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Saic Institute Of Management & Technology</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://shorturl.at/swzCT" class="d-block w-100 h-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://shorturl.at/lpxzZ" class="d-block w-100 h-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+      {% comment %} about section start {% endcomment %}
+
+    <div class="container mt-5">
+        <p>
+            Bangladesh Technical Education Board (BTEB) approved Psych Institute of Management and Technology is the largest private polytechnic. Skilled human 
+            resources cannot be developed unless quality education is coordinated with the rapid spread of technology. And technical education is very important to 
+            build skilled and experienced manpower. With the evolution of time and the development of technology, the demand for technical education 
+            (Technical Education) is increasing worldwide. Psych Institute of Management and Technology strives to fulfill that need. Psych Institute of Management 
+            and Technology started its journey with only 1 technology in the month of June 2002 with sincere efforts and strong morale. In the first year 
+            of establishment, students were able to get admission in all the seats of the sanctioned number of seats. Facing the initial challenges, this private 4
+            polytechnic.
+            (Technical zEducation) got permission to admit more students in more seats by introducing more new technologies from the academic year 2003-2004. At 
+            present, the program of admission of students in 1000 seats in 13 technologies is being conducted for the academic year 2021-2022.
+        </p>
+    </div>
  {% endblock %}
