--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -79,4 +79,12 @@
             present, the program of admission of students in 1000 seats in 13 technologies is being conducted for the academic year 2021-2022.
         </p>
     </div>
+
+
+    <div class="container">
+        <h3 class="text-center">Departments</h3>
+        {% for student in students%}
+            <p>{{student.department}}</p>
+        {% endfor %}
+    </div>
  {% endblock %}
